tests/parsing/smtlib/poly/errors/170_function_decl_bad_ret_sort_1.psmt2
(set-logic ALL)
(define-funs-rec ((foo (par (a) () _))))
