tests/parsing/smtlib/poly/errors/170_function_decl_bad_ret_sort_1.expected
File "tests/parsing/smtlib/poly/errors/170_function_decl_bad_ret_sort_1.psmt2", line 2, character 35-36:
Error while parsing a function declaration, read the reserved word '_',
      but expected a sort for the return type of the function.
